chore: 修改version、repository信息

--- a/package.json
+++ b/package.json
@@ -1,9 +1,15 @@
 {
   "name": "youdao-translate-api",
-  "version": "1.0.1",
+  "description": "基于有道智云的文本翻译工具",
+  "version": "1.0.2",
   "main": "lib/index.js",
   "license": "MIT",
   "type": "module",
+  "keywords": ["translate"],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/candysoulmate/youdao-translate-api"
+  },
   "scripts": {
     "tsc": "tsc"
   },
